<resources>
    <string name="app_name">Games Library</string>
    <string name="lblGameName">Game name:</string>
    <string name="txtGameNameHint">Type the name of the game</string>
    <string name="lblConsole">Console:</string>
    <string name="lblGameYear">Game Year:</string>
    <string name="btnSaveGame">Save Game</string>
    <string name="chkGameFinished">Game finished</string>
    <string name="lblConsoleName">Console name:</string>
    <string name="txtConsoleNameHint">Type the name of the console</string>
    <string name="btnSaveConsole">Save Console</string>
    <string name="emptyConsoleNameWarning">Console name can\'t be empty!</string>
    <string name="console_created_toast_message">Console created with success!</string>
    <string name="console_updated_toast_message">Console updated with success!</string>
    <string name="empty_list_placeholder">Empty list...</string>
    <string name="empty_game_name_warning">Game name can\'t be empty!</string>
    <string name="game_created_toast_message">Game created with success!</string>
    <string name="game_updated_toast_message">Game updated with success!</string>
    <string name="invalid_console_selected">The selected console is not valid! Check your selection.</string>
    <string name="invalid_game_year">Invalid game year!</string>
    <string name="recorded_consoles">Recorded Consoles</string>
    <string name="recorded_games">Recorded Games</string>
    <string name="console_delete_confirmation_message">Do you really want to delete</string>
    <string name="delete_console_alert_title">Delete Console</string>
    <string name="delete_console_alert_cancel_button_text">Cancel</string>
    <string name="delete_console_alert_confirm_button_text">Yes</string>
    <string name="console_has_links_alert_message">is linked to games and cannot be deleted!</string>
    <string name="console_has_links_alert_message_title">Console has links</string>
    <string name="delete_game_alert_title">Delete Game</string>
    <string name="game_delete_confirmation_message">Do you really want to delete</string>
    <string name="delete_game_alert_cancel_button_text">Cancel</string>
    <string name="delete_game_alert_confirm_button_text">Yes</string>
</resources>
